http-http/ossm_ISTIO_MUTUAL/bookinfo/vs-sleep-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sleep-egress
  namespace: bookinfo
spec:
  exportTo:
  - .
  gateways:
  - mesh
  hosts:
  - nginx.${OCP_APPS_DOMAIN}
  http:
  - match:
    - gateways:
      - mesh
    route:
    - destination:
        host: default-egress.istio-system.svc.cluster.local
        subset: nginx-mtls
        port:
          number: 443
